--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
           </form>
      </div>
      
-     <?php 
-          $simple = "This is a PHP variable"
-     ?>
+     <?php include 'main.php'; ?>
      <script src="fireBase.js"></script>
      <script type="text/javascript">
      
