--- a/index/home.html
+++ b/index/home.html
@@ -16,7 +16,7 @@
 <body>
      <div id="container1" style="width: 90%; margin: auto;">
           <h2>Input field</h2>
-          <form action="index.php" method="postd" id="main_form">
+          <form action="" method="postd" id="main_form">
                <div class="form-group">
                     <label for="Name">Name:</label>
                     <input id="name" type="text" class="form-control" require>
