--- a/index/home.html
+++ b/index/home.html
@@ -5,7 +5,7 @@
      <meta name="viewport" content="width=device-width, initial-scale=1.0">
      <title>Ghena Art Media Productions</title>
      <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-     <link rel="stylesheet" href="css/main_css/main.css">
+     <link rel="stylesheet" href="/css/main_css/main.css">
      <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
      <script src="https://www.gstatic.com/firebasejs/8.2.1/firebase-app.js"></script>
@@ -33,7 +33,7 @@
      </div>
      
      <?php include 'main.php'; ?>
-     <script src="fireBase.js"></script>
+     <script src="/fireBase.js"></script>
      <script type="text/javascript">
      
      function fetch(obj){
@@ -90,6 +90,6 @@
 
 
      </script>
-     <script src="main.js"></script>
+     <script src="/main.js"></script>
 </body>
 </html>
