--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
      <div id="firebaseui-auth-container"></div>
      <div id="loader">Loading...</div>
      <script src="fireBase.js"></script>
-     <script src="login.js"></script>
+     <script src="index.js"></script>
 </body>
 </html>
