--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
      <link type="text/css" rel="stylesheet" href="css/login_css/login.css">
 </head>
 <body>
+     <div id="cont"></div>
      <div id="firebaseui-auth-container"></div>
      <div id="loader">Loading...</div>
      <script src="fireBase.js"></script>
