--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
      <script src="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.js"></script>
      <link type="text/css" rel="stylesheet" href="https://www.gstatic.com/firebasejs/ui/4.6.1/firebase-ui-auth.css" />
      <link type="text/css" rel="stylesheet" href="css/login_css/login.css">
+     <link rel="icon" type="image/png" href="/images/icon.png">
 </head>
 <body>
      <div id="cont"></div>
